# NOTE: THIS FILE IS EXPERIMENTAL FOR THE BAZEL MIGRATION AND NOT USED FOR
# YOUR BUILDS CURRENTLY.
#
# It is not yet the source of truth for your build. If you're looking to modify
# the build file, modify the Android.bp file instead. Do *not* modify this file
# unless you have coordinated with the team managing the Soong to Bazel
# migration.

load("//build/kernel/kleaf:kernel.bzl", "kernel_module")

filegroup(
    name = "reset.kconfig",
    srcs = glob([
        "Kconfig",
    ]),
    visibility = [
        "//private/google-modules/soc/gs:__pkg__",
    ],
)

kernel_module(
    name = "reset.slider",
    srcs = glob([
        "**/*.c",
        "**/*.h",
        "Kbuild",
    ]) + [
        "//private/google-modules/bms/misc:headers",
        "//private/google-modules/bms:headers",
        "//private/google-modules/soc/gs:gs101_soc_headers",
    ],
    outs = [
        "exynos-reboot.ko",
    ],
    kernel_build = "//private/google-modules/soc/gs:slider",
    kernel_module_deps = [
        "//private/google-modules/bms:bms.slider",
        "//private/google-modules/soc/gs:gs101_soc",
    ],
    visibility = [
        "//private/google-modules/soc/gs:__pkg__",
    ],
)
